# appGo

./: .cursorrules  CMakeLists.txt  design.md  project-timeline.md
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/widgets/: appcard.cpp  appcard.h  appgridview.cpp  appgridview.h  paginationwidget.cpp  paginationwidget.h
